workspace = { members = ["mqtt-server"] }

[package]
name = "esp32-rust-mqtt"
version = "0.1.0"
authors = ["Jurek <git@jurek.io>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
static_cell = { version = "2.0", features = ["nightly"] }
log = "0.4.21"

# ESP stuff
esp-backtrace = { version = "0.11.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.17.0", features = [
    "esp32",
    "embassy",
    "embassy-executor",
    "embassy-time-timg0",
    "embassy-executor-thread",
    "embassy-executor-interrupt"
] }
esp-println = { version = "0.9.0", features = [
    "esp32",
    "log"
] }
esp-wifi = { version = "0.5.0", features = [
    "esp32",
    "phy-enable-usb",
    "utils",
    "wifi-default",
    "wifi",
    "async",
    "embassy-net",
    "wifi",
    "embedded-svc"
] }



# Embassy stuff
embassy-time = { version = "0.3.0" }
embedded-hal-async = { version = "1.0.0" }
embedded-io-async = { version = "0.6.0" }
embassy-futures = { version = "0.1.0" }
embassy-net-driver = { version = "0.2" }
embassy-net = { version = "0.4.0", features = [
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
    "default",
    "medium-ieee802154",
    "medium-ip",
    "dns",
    "dhcpv4-hostname",
    "igmp",
    "packet-trace",
    "proto-ipv6",
    "proto-ipv4",
] }
embassy-executor = { version = "0.5.0", features = [
    "integrated-timers",
    "nightly"
] }
embassy-sync = "0.5.0"
mqtt-server = { path = "mqtt-server" }

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.dev.package.esp-hal]
opt-level = 3



[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
