[package]
name = "mqtt-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-sync = "0.5.0"
mqtt-format = { git = "https://github.com/dscso/cloudmqtt.git", rev = "d500ad2", features = ["mqttv5"], default-features = false }
winnow = { version = "0.6.8", default-features = false }
embassy-futures = { version = "0.1.0" }
embassy-net-driver = { version = "0.2" }
embassy-net = "0.4.0"
log = "0.4.21"
embedded-io-async = "0.6.1"
embassy-time = "0.3.0"
heapless = "0.8.0"
