[package]
name = "mqtt-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mqtt-format = { git = "https://github.com/dscso/cloudmqtt.git", rev = "d500ad2", features = ["mqttv5"], default-features = false }
winnow = { version = "0.6.8", default-features = false }
embedded-error-chain = "1.0.0"
heapless = "0.8.0"

embassy-sync = { workspace = true }
embassy-futures = { workspace = true }
embassy-net-driver = { workspace = true }
embassy-net = {  workspace = true }
log = { workspace = true }
embedded-io-async = { workspace = true }
embassy-time = { workspace = true }


