[workspace]
members = ["mqtt-server"]


[package]
edition = "2021"
name = "embassy-stm32f7-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
embassy-time = { version = "0.3.0", features =  ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embedded-hal-async = { version = "1.0.0" }
embedded-io-async = { version = "0.6.0" }
embassy-futures = { version = "0.1.0", features = ["defmt"] }
embassy-net-driver = { version = "0.2", features = ["defmt"] }
embassy-net = { git = "https://github.com/dscso/embassy", rev = "121b556", features = [
    "tcp",
    "dhcpv4",
    "medium-ethernet",
    "igmp",
    "proto-ipv6",
    "proto-ipv4",
    "dns",
    "defmt"
] }


[dependencies]
# Change stm32f767zi to your chip name, if necessary.
static_cell = { version = "2.0", features = ["nightly"] }

embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32f767zi", "memory-x", "unstable-pac", "time-driver-any", "exti"]  }

embassy-time = { workspace = true }
embedded-hal-async = { workspace = true }
embedded-io-async = { workspace = true }
embassy-futures = { workspace = true }
embassy-net-driver = { workspace = true }
embassy-net = { workspace = true }
embassy-sync = { workspace = true}

#embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
#embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
#embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", "dns"] }
#embedded-io-async = { version = "0.6.1" }
embassy-usb = { version = "0.1.0", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.8", default-features = false }
nb = "1.0.0"
rand_core = "0.6.3"
critical-section = "1.1"
embedded-storage = "0.3.1"




mqtt-server = { path = "mqtt-server", features = ["defmt"] }





[profile.release]
debug = 2
